lib/include/ext_udp.h


PREFIX unsigned short uart_read(unsigned char bus_num, unsigned char *buff);

PREFIX unsigned short uart_write(unsigned char bus_num, unsigned char *buff, unsigned short len);

PREFIX unsigned char usPullStrWinQ(unsigned short &winMsg, unsigned short &wPar, unsigned short &lPar, float &fVal, char *str);

PREFIX int u3PullWinQ(unsigned short &winMsg, unsigned short &wPar, unsigned short &lPar);

PREFIX int isWinRegistered();


PREFIX void usTestMsg(unsigned short winMsg, unsigned short wPar, unsigned short lPar);



//PREFIX void deviceDisconnect();

PREFIX int ReadTEST(short uNum, unsigned char *buff);

PREFIX unsigned short usSelectDev(int ipaddr);

PREFIX unsigned short usGetConnectedDeviceIP(unsigned short i, char *devName);

PREFIX void RebootCurrentDevice();


PREFIX void heartbeat_1ms();
PREFIX void RegisterWin(HWND hwnd);
PREFIX void RegisterWin(int hwnd);